fix spacing issue on header

--- a/src/App.css
+++ b/src/App.css
@@ -24,10 +24,11 @@ header a {
 button.col-1 {
   margin: .5em;
   display: inline-block;
-  width: 20px;
   font-size: 1.25em;
+  cursor: pointer;
+  flex: none;
 }
 
 .col-1 {
-  flex: 1;
+  flex-grow: 1;
 }
